<resources>
    <string name="app_name">Decimal to Binary Converter</string>
    <string name="to_binary">To Binary:</string>
    <string name="decimal_to_binary_converter">Decimal to Binary Converter</string>
    <string name="enter_a_decimal_value">Enter a Decimal Value</string>
    <string name="todo">TODO</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
    <string name="enter_a_decimal_number">Enter a Decimal Number</string>
</resources>